<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_margin="16dp">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/edit_order"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_below="@+id/text"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/amount_order" />

        <EditText
            android:id="@+id/edt_amount_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/number"
            android:hint="@string/number"
            android:inputType="numberDecimal"
            android:paddingHorizontal="16dp" />
    </LinearLayout>
</RelativeLayout>