<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:elevation="2dp"
    android:layout_margin="2dp"
    android:background="@drawable/bg_list_row"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_order"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:elevation="2dp"
        android:layout_alignParentStart="true"
        android:layout_margin="4dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_item_order"
        android:layout_alignStart="@+id/img_item_order"
        android:layout_alignEnd="@+id/img_item_order"
        android:layout_marginVertical="2dp"
        android:padding="2dp"
        android:textAlignment="textEnd"
        android:text="@string/total" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="4dp"
        android:layout_toEndOf="@+id/img_item_order"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:id="@+id/tv_item_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:text="@tools:sample/lorem" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_item_amount_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/number"
                android:textSize="14sp"/>
            <ImageButton
                android:id="@+id/img_btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_edit_24"
                android:contentDescription="@string/edit_order" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_item_total_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:maxLines="1"
            android:textSize="14sp"
            tools:text="@tools:sample/lorem" />
    </LinearLayout>
</RelativeLayout>