<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.OrderFoodAndDrink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DetailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:scaleType="centerCrop"
                android:layout_margin="2dp"
                android:contentDescription="@string/app_name"
                tools:src="@tools:sample/avatars" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:layout_toStartOf="@+id/tv_price"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:text="@tools:sample/lorem" />

            </RelativeLayout>
            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textSize="12sp"
                tools:text="@tools:sample/lorem/random" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_add_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    style="?android:attr/buttonBarButtonStyle"
                    app:icon="@drawable/ic_baseline_add_24"/>
                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/share"
                    style="?android:attr/buttonBarButtonStyle"
                    app:icon="@drawable/ic_baseline_share_24" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>